tests/requests/invalid/nonascii_05.http
GET /one\0/two HTTP/1.1\r\n
Content-Length: 3\r\n
\r\n
WOW
